fix(engine): improve error message for SAXExceptions on deployment
Error message for SAXException should contain enough detail for users to figure out what is wrong with the model.

e.g.
before:
org.camunda.bpm.model.xml.ModelParseException: SAXException while parsing input stream
after:
org.xml.sax.SAXException: Error: URI=null Line=33: cvc-complex-type.3.2.2: Attribute 'stroke' is not allowed to appear in element 'bpmndi:BPMNPlane'.